Fixed categories